<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrossfitTimer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_crossfit_timer">CrossfitTimer</string>
    <string name="timer_label">00:00.00</string>
    <string name="reset_button">reset</string>
    <string name="stopwatch_title">Stopwatch</string>
    <string name="countdown_title">Countdown</string>
    <string name="tabata_title">Tabata</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="start_caps">START</string>
    <string name="emom_title">How many rounds?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="backspace"><![CDATA[<]]></string>
    <string name="emom_timer_label"></string>
    <string name="stop_caps">STOP</string>
    <string name="tabata_rest_timer">Rest :10</string>
    <string name="tabata_work_timer">Work :20</string>
    <string name="tabata_info">8 Rounds - 4 Mins Total</string>
</resources>
