<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/emom_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >

    <TextView android:id="@+id/emom_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="24sp"
              android:gravity="center_horizontal"
              />

    <TextView android:id="@+id/emom_timer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/emom_timer_label"
              android:textSize="61sp"
              android:gravity="center_horizontal"
            />
    <GridLayout android:id="@+id/numpad_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal"
                >
        <Button android:id="@+id/numpad_1"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/one"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_2"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/two"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_3"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/three"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_4"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/four"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_5"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/five"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_6"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/six"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_7"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/seven"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_8"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/eight"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_9"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/nine"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_0"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/zero"
                android:layout_column="1"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
        <Button android:id="@+id/numpad_backspace"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/backspace"
                android:layout_column="2"
                android:textSize="24sp"
                style="?android:attr/borderlessButtonStyle"
                />
    </GridLayout>
    <LinearLayout android:id="@+id/bottom_bar_layout"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:baselineAligned="false">
        <View   android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"
                />

        <Button android:id="@+id/start_stop_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_caps"
                android:gravity="center"
                android:layout_gravity="bottom"
                style="?android:attr/buttonBarButtonStyle"
                />
    </LinearLayout>
</LinearLayout>