<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <TextView android:id="@+id/tabata_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="24sp"
              android:text="@string/tabata_info"
              android:gravity="center"
              android:layout_marginTop="50dp"
            />
    <TextView android:id="@+id/tabata_work_timer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/tabata_work_timer"
              android:fontFamily="sans-serif-condensed"
              android:textSize="68sp"
              android:gravity="center"
              android:layout_marginTop="50dp"
              android:layout_gravity="center_vertical"
            />
    <TextView android:id="@+id/tabata_rest_timer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/tabata_rest_timer"
              android:fontFamily="sans-serif-thin"
              android:textSize="68sp"
              android:gravity="center"
              android:layout_gravity="center_vertical"
            />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal">

        <Button android:id="@+id/start_stop_button"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:text="@string/start"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="center"
                />
        <View   android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"
                />
        <Button android:id="@+id/reset_button"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:text="@string/reset_button"
                android:textSize="24sp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                />
    </LinearLayout>
</LinearLayout>